Adding and deleting a private profile now working

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -99,7 +99,7 @@
                             {% endif %}
                             <li role="separator" class="divider"></li>
                             <li><a data-toggle="modal" id="findFriendLink" data-target="#findFriendModal">Connect a new friend</a></li>
-                            <li><a href="{{ url_for('profiles.connect_friends') }}">Create Your Own Profile for a Friend</a></li>
+                            <li><a data-toggle="modal" id="addFriendProfileLink" data-target="#addFriendProfileModal">Create Your Own Profile for a Friend</a></li>
                         </ul>    
                     </li>
                     <li class="dropdown" id="partiesDropDown">
