--- a/app/templates/spoonacular/recipe_search.html
+++ b/app/templates/spoonacular/recipe_search.html
@@ -46,16 +46,12 @@
                     <label>
                         <input type="checkbox" class="alertme" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
                         {% for guest in party.guests %}{% if guest.profiles.diet.diet_type == diet %}
-
-
                         <a href="#" data-toggle="tooltip" data-placement="right" title="Reason: {{  guest.profiles.diet_reason}}">
-
-                            {{  guest.profiles.first_name  }} {{  guest.profiles.last_name  }}</a><br>{% endif %}{% endfor %}
-                            
-                        </label><br>
+                            {%if guest.profiles.first_name and guest.profiles.last_name %}{{  guest.profiles.first_name  }} {{  guest.profiles.last_name}}{% elif guest.profiles.first_name and not guest.profiles.last_name %}{{  guest.profiles.first_name}} {% else %}{{  guest.profiles.email  }}{% endif %}</a><br>{% endif %}{% endfor %}
+                    </label>
                         
-                    </div>
-                    {% endfor %}
+                </div>
+                {% endfor %}
 
                     <h4 class="form-control-static">Intolerances/Allergies:</h4>
                     <div class="checkbox">
@@ -66,7 +62,7 @@
                             {% for intolerance in guest.profiles.intolerances %}
                             {% if intolerance.intol_name == intol %}
                             <a href="#" data-toggle="tooltip" data-placement="right" title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not.">
-                                {{  guest.profiles.first_name  }} {{  guest.profiles.last_name  }}</a><br>
+                                {% if guest.profiles.first_name and guest.profiles.last_name %}{{  guest.profiles.first_name  }} {{  guest.profiles.last_name}}{% elif guest.profiles.first_name and not guest.profiles.last_name %}{{  guest.profiles.first_name}} {% else %}{{  guest.profiles.email  }}</a>{% endif %}</a><br>
                                 {% endif %}
                                 {% endfor %}    
                                 {% endfor %}
@@ -87,7 +83,7 @@
                                 
                                 {% if guestavoid.ingredient == avoid %}
                                 
-                                <a href="#" data-toggle="tooltip" data-placement="right" title="{{  guestavoid.reason  }}">{{  guest.profiles.first_name  }} {{  guest.profiles.last_name  }}</a>{% if not loop.last %}, {% endif %}
+                                <a href="#" data-toggle="tooltip" data-placement="right" title="{{  guestavoid.reason  }}">{% if guest.profiles.first_name and guest.profiles.last_name %}{{  guest.profiles.first_name  }} {{  guest.profiles.last_name}}{% elif guest.profiles.first_name and not guest.profiles.last_name %}{{  guest.profiles.first_name}} {% else %}{{  guest.profiles.email  }}</a>{% endif %}</a>
                                 {% endif %}
                                 {% endfor %}    
                                 {% endfor %}
