--- a/app/templates/spoonacular/view_recipe.html
+++ b/app/templates/spoonacular/view_recipe.html
@@ -1,59 +1,60 @@
+<div class="modal fade" id="seeRecipeModal" tabindex="-1" role="dialog" aria-labelledby="seeRecipeLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="seeRecipeLabel">Recipe Preview</h5>
+                <button type="button" class=" close recipe_close_button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
 
-{% extends 'base.html' %}
-{% block content %}
-<div class="row well-spaced" style="padding-top: 3em">
-    <div class="col-md-8 col-md-offset-2">
-        <div class = "row round_div" style="padding-top: 2em">
-            <h1>{{  title  }}</h1>
-            <form action="{{ url_for('spoonacular.add_recipe_box') }}"  method="POST">
-                <div class="form-group">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    <input type="hidden" name="party_diets" value="{{  newdiets  }}">
-                    <input type="hidden" name="party_avoids" value="{{  avoids  }}">
-                    <input type="hidden" name="party_intols" value="{{  intols  }}">
-                    <input type="hidden" name="recipe_id" value="{{  recipe_id }}">
-                    <input type="hidden" name="title" value="{{  title  }}">
-                    <input type="hidden" name="recipe_image_url" value="{{  recipe_image_url  }}">
-                    <input type="hidden" name="recipe_url" value="{{  recipe_url }}">
-                    <input type="hidden" name="instructions" value="{{  instructions }}">
-                    <input type="hidden" name="ingredients" value="{{  ingredients }}">
-                    <input type="hidden" name="diets" value="{{  newdiets }}">
-                    <input type="hidden" name="intols" value="{{  intols }}">
-                    <input type="hidden" name="avoids" value="{{  avoids }}">
-                    <input type="hidden" name="cuisine" value="{{  cuisine }}">
-                    <input type="hidden" name="course" value="{{  course }}">
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Save this recipe" class="btn btn-success" style="width: 100%">
-                </div>
-            </form>
-            <a href="/spoonacular/searchrecipes" class="btn btn-success">Back to recipe search page</a></li>
+                    <h1>{{  info['title']  }}</h1>
+                    <br><br>
+                    {% if saved_recipe %}
+                    <span class="text-info">This recipe is already saved</span>
+                    {% else %}
+                    {% from "_formhelpers.html" import render_field %}
+                        <form action="{{ url_for('spoonacular.add_recipe_box') }}" class="form form-horizontal" method="post" role="form" id="saveRecipe">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        <input type="hidden" name="recipe_id" value="{{  recipe_id  }}"/>
+                            {{ render_field(form.notes,  placeholder="  Type your notes here", id="note_input", style="width: 100%", rows="3",  maxlength=300) }}
+                            <input type="submit" class="btn btn-success" value="Save Recipe">&ensp;<button type="button" class="btn btn-sm btn-default recipe_close_button" data-dismiss="modal">Close</button>
+                        </form>
 
-            <br>
-            <b>Safe for:</b>
-            <ul>
-                <li><b>Diets:</b> {% for diet in newdiets %} {{  diet  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
-                <li><b>Intolerances:</b> {% for intol in intols %}{{  intol  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
-                <li><b>Avoids:</b> {% for avoid in avoids %}{{  avoid  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
-            </ul>
+                    {% endif %}
+                    <br>
+                    <b>Course:</b> {{  course  }}<br><br>
+                    <b>Cuisine:</b> {{  cuisine  }} <br><br>
+            
+                    <b>Safe for:</b>
+                    <ul>
+                        <li><b>Diets:</b> {% for diet in newdiets %} {{  diet  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
+                        <li><b>Intolerances:</b> {% for intol in intols %}{{  intol  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
+                        <li><b>Avoids:</b> {% for avoid in avoids %}{{  avoid  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
+                    </ul>
 
-           <b>Ingredients</b></li>
-                <ul>{% for each in ingredients %}
-                    <li>{{  each  }}</li>
-                    {% endfor %}
-                </ul>
+                   <b>Ingredients</b></li>
+                        <ul>{% for each in ingredients %}
+                            <li>{{  each  }}</li>
+                            {% endfor %}
+                        </ul>
 
-            <b>Instructions</b>
-            <ul>{% for each in instructions %}
-                <li>{{  each  }}</li>
-                {% endfor %}
-            </ul>
+                    <b>Instructions</b>
+                    <ul>{% for each in instructions %}
+                        {% for step in each %}
+                        <li>{{  step  }}</li>
+                        {% endfor %}
+                        {% endfor %}
+                    </ul>
 
-            <img class="img-fluid center" src="{{  recipe_image_url  }}" alt="{{  title  }}" ><br><br><br>
-        </div>
+                    <a href="{{  info['source_url']  }}" target="_blank">Original Recipe Source</a>&emsp;-&emsp;<a href="{{  info['spoonacular_url']  }}" target="_blank">View this recipe at Spoonacular</a>
+                    <img class="img-responsive img-rounded center" alt="Responsive image" src="{{  info['image_url']  }}" alt="{{  info['title']  }}" ><br><br><br>
+
+                </div>    
+            </div>
+        </div>    
     </div>
 </div>
-{% endblock %}
-
-
 
